--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.6.5
   shared_preferences: ^2.2.2
   permission_handler: ^11.3.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
-  #   - images/a_dot_ham.jpeg
+    - slider/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
