--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.2
   permission_handler: ^11.3.0
   carousel_slider: ^4.2.1
+  staggered_grid_view_flutter: ^0.0.4
 
 dev_dependencies:
   flutter_test:
