--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   permission_handler: ^11.3.0
   carousel_slider: ^4.2.1
   staggered_grid_view_flutter: ^0.0.4
+  number_inc_dec: ^0.8.0
+  fluttertoast: ^8.2.4
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
